# loquacious

./: LICENSE  README.md
docker/: Dockerfile.android-linux
src/: build.sh
src/SpeechTrainer/: Brainstorming.qml  BrainstormingForm.ui.qml  CMakeLists.txt  Home.qml  HomeForm.ui.qml  Speech.qml  SpeechForm.ui.qml  brainstormingmodel.cpp  brainstormingmodel.h  countdowntimer.cpp  countdowntimer.h  dictum.cpp  dictum.h  dictumlistmodel.cpp  dictumlistmodel.h  dictums.json  main.cpp  main.qml  mainmodel.cpp  mainmodel.h  speechmodel.cpp  speechmodel.h  speechtrainer.qrc  topicdrawer.cpp  topicdrawer.h  topicitemmodel.cpp  topicitemmodel.h  topiclistmodel.cpp  topiclistmodel.h
src/q/: dictums.json  extract.sh  q.py  topics.txt  topics_orig.txt
